# piklema_test_mqtt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  arm64.dockerfile  build_arm64.sh
src/: main.cpp  main.qml  textfilemqttpublisher.cpp  textfilemqttpublisher.h
test/: CMakeLists.txt  test.txt  tst_testmqttpublisher.cpp
